Implement analysis tool

--- a/paper/velocity.tex
+++ b/paper/velocity.tex
@@ -2,7 +2,7 @@
 
 \chapter{Proposed framework: \velocity{}}
 \label{ch:velocity}
-The implementation part of this thesis will provide a framework and a set of tools, tailored at optimising the test suite as well as providing accompanying metrics and insights. The framework was named \Gls{velocity} to reflect its purpose of enhancing the efficiency and speed of \CI{}. This paper will now proceed by first describing the design goals of the framework, after which a high-level schematic overview of the implemented architecture will be provided. The architecture consists of a seven-step pipeline, divided into three individual components. These steps will be elaborated in more detail in \cref{sec:velocity-pipeline}. Subsequently, the next section will present the \emph{Alpha} algorithm as as a novel prioritisation algorithm, and this chapter will be concluded with a presentation of the analysis tools.
+The implementation part of this thesis will provide a framework and a set of tools, tailored at optimising the test suite as well as providing accompanying metrics and insights. The framework was named \Gls{velocity} to reflect its purpose of enhancing the efficiency and speed of \CI{}. This paper will now proceed by first describing the design goals of the framework, after which a high-level schematic overview of the implemented architecture will be provided. The architecture consists of a seven-step pipeline, divided into three individual components. These steps will be elaborated in more detail in \cref{sec:velocity-pipeline}. Subsequently, the next section will present the \emph{Alpha} algorithm as as a novel prioritisation algorithm, and this chapter will be concluded with an overview of the analytical features.
 
 \input{velocity/design-goals.tex}
 \clearpage
@@ -11,4 +11,5 @@ The implementation part of this thesis will provide a framework and a set of too
 \input{velocity/pipeline.tex}
 \clearpage
 \input{velocity/alpha.tex}
+\clearpage
 \input{velocity/analysis.tex}
