--- a/paper/velocity/analysis.tex
+++ b/paper/velocity/analysis.tex
@@ -2,3 +2,12 @@
 
 \section{Analysis}
 todo
+
+CLI version of the predictor
+
+- predict run
+- predictions run
+- scores metapredictor of repository
+- durations
+- failures
+- coverage 
