--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -124,7 +124,8 @@
 	frame=lines,
 	captionpos=b,
 	backgroundcolor=\color{code-background},
-	autogobble=true
+	autogobble=true,
+    escapeinside={(*}{*)}
 }
 
 \renewcommand{\lstlistlistingname}{List of \lstlistingname s}
